// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Collapse snapshot > Collapse demo snapshot 0 1`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "wrap",
      "--justify-content": "center",
      "--spacing": "8px",
    }
  }
>
  <div
    className="bui-switch bui-switch-medium bui-switch-primary"
  >
    <input
      checked={false}
      className="bui-switch-input"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
  </div>
  <div
    className="bui-collapse"
    style={
      {
        "WebKitWidth": "0px",
        "WebkitTransition": "none",
        "transition": "none",
        "width": "0px",
      }
    }
  >
    <div
      className="bui-card"
      style={
        {
          "background": "#CCCCCC",
          "height": "100px",
          "width": "100px",
        }
      }
    />
  </div>
</div>
`;

exports[`Collapse snapshot > Collapse demo snapshot 0 2`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "wrap",
      "--justify-content": "center",
      "--spacing": "8px",
    }
  }
>
  <div
    className="bui-switch bui-switch-medium bui-switch-primary bui-switch-checked"
  >
    <input
      checked={true}
      className="bui-switch-input"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
  </div>
  <div
    className="bui-collapse"
    style={
      {
        "WebKitHeight": "auto",
        "WebkitTransition": "none",
        "height": "auto",
        "transition": "none",
      }
    }
  >
    <div
      className="bui-card"
      style={
        {
          "background": "#CCCCCC",
          "height": "100px",
          "width": "100px",
        }
      }
    />
  </div>
</div>
`;

exports[`Collapse snapshot > Collapse demo snapshot 0 3`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "wrap",
      "--justify-content": "center",
      "--spacing": "8px",
    }
  }
>
  <div
    className="bui-switch bui-switch-medium bui-switch-primary bui-switch-checked"
  >
    <input
      checked={true}
      className="bui-switch-input"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
  </div>
  <div
    className="bui-collapse"
    style={
      {
        "WebKitHeight": "auto",
        "WebkitTransition": "none",
        "height": "auto",
        "transition": "none",
      }
    }
  >
    <div
      className="bui-card"
      style={
        {
          "background": "#CCCCCC",
          "height": "100px",
          "width": "100px",
        }
      }
    />
  </div>
</div>
`;

exports[`Collapse snapshot > Collapse demo snapshot 0 4`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "16px",
    }
  }
>
  <button
    className="bui-btn bui-btn-outlined bui-btn-medium"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    切换状态
  </button>
  <div
    className="bui-stack"
    style={
      {
        "--align-items": "center",
        "--flex-direction": "row",
        "--flex-wrap": "nowrap",
        "--justify-content": "center",
        "--spacing": "16px",
      }
    }
  >
    <div
      style={
        {
          "width": "120px",
        }
      }
    >
      仅进入动画:
    </div>
    <div
      className="bui-collapse"
      style={
        {
          "WebKitHeight": "0px",
          "WebkitTransition": "none",
          "height": "0px",
          "transition": "none",
        }
      }
    >
      <div
        className="bui-card"
        style={
          {
            "background": "#CCCCCC",
            "height": "80px",
            "padding": "8px",
            "width": "100px",
          }
        }
      >
        <div>
          瞬间退出，平滑进入
        </div>
      </div>
    </div>
  </div>
  <div
    className="bui-stack"
    style={
      {
        "--align-items": "center",
        "--flex-direction": "row",
        "--flex-wrap": "nowrap",
        "--justify-content": "center",
        "--spacing": "16px",
      }
    }
  >
    <div
      style={
        {
          "width": "120px",
        }
      }
    >
      仅退出动画:
    </div>
    <div
      className="bui-collapse"
      style={
        {
          "WebKitWidth": "0px",
          "WebkitTransition": "none",
          "transition": "none",
          "width": "0px",
        }
      }
    >
      <div
        className="bui-card"
        style={
          {
            "background": "#CCCCCC",
            "height": "80px",
            "padding": "8px",
            "width": "100px",
          }
        }
      >
        <div>
          瞬间进入，平滑退出
        </div>
      </div>
    </div>
  </div>
  <div
    className="bui-stack"
    style={
      {
        "--align-items": "center",
        "--flex-direction": "row",
        "--flex-wrap": "nowrap",
        "--justify-content": "center",
        "--spacing": "16px",
      }
    }
  >
    <div
      style={
        {
          "width": "120px",
        }
      }
    >
      全部禁用:
    </div>
    <div
      className="bui-collapse"
      style={
        {
          "WebKitHeight": "0px",
          "WebkitTransition": "none",
          "height": "0px",
          "transition": "none",
        }
      }
    >
      <div
        className="bui-card"
        style={
          {
            "background": "#CCCCCC",
            "height": "80px",
            "padding": "8px",
            "width": "100px",
          }
        }
      >
        <div>
          瞬间切换，无动画
        </div>
      </div>
    </div>
  </div>
</div>
`;
